Fix white space between menu button and menu-items

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -74,7 +74,7 @@ header {
   display: none;
   position: absolute;
   background-color: #000000;
-  top: 50px;
+  top: 49px;
 }
 
 // Display Menu sections on hover
@@ -106,7 +106,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 10px;
+  border-radius: 15px;
   height: 200px;
   width: 300px;
   background-repeat: no-repeat;
@@ -120,7 +120,7 @@ header {
       padding-top: 70px;
       padding-bottom: 90px;
       font-size: 1.75rem;
-      background-color: rgba($color: #000000, $alpha: 0.5);
+      background-color: rgba($color: #000000, $alpha: 0.7);
     }
   }
 
